hero bg image alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,8 @@ img {
 .hero__content {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  align-items: center;
+  gap: 4rem;
 }
 
 .hero__content--mini-title {
